force-app/main/default/objects/Attendance__c/Attendance__c.object-meta.xml
<CustomObject>
    <label>Attendance</label>
    <nameField>
        <displayFormat>AS-{0000000}</displayFormat>
        <label>Attendance Session</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendance</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>