force-app/main/default/objects/Attendance__c/fields/Absent_Reason__c.field-meta.xml
<CustomField>
    <fullName>Absent_Reason__c</fullName>
    <inlineHelpText>Absent Reason</inlineHelpText>
    <label>Absent Reason</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>