force-app/main/default/objects/Attendance__c/fields/Current_Location_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Current_Location_Latitude__c</fullName>
    <label>Current Location Latitude</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>