force-app/main/default/objects/Attendance__c/fields/Current_Location_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Current_Location_Longitude__c</fullName>
    <label>Current Location Longitude</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>