force-app/main/default/objects/Attendance__c/fields/Excused_Absence__c.field-meta.xml
<CustomField>
    <fullName>Excused_Absence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Excused Absence</label>
    <type>Checkbox</type>
</CustomField>