force-app/main/default/objects/Attendance__c/fields/LogIn_DateTime__c.field-meta.xml
<CustomField>
    <fullName>LogIn_DateTime__c</fullName>
    <label>LogIn DateTime</label>
    <type>DateTime</type>
</CustomField>