force-app/main/default/objects/Attendance__c/fields/LogOut_Datetime__c.field-meta.xml
<CustomField>
    <fullName>LogOut_Datetime__c</fullName>
    <label>LogOut Datetime</label>
    <type>DateTime</type>
</CustomField>