force-app/main/default/objects/Attendance__c/fields/Logout_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Logout_Longitude__c</fullName>
    <label>Logout Longitude</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>