force-app/main/default/objects/Attendance__c/fields/Representative__c.field-meta.xml
<CustomField>
    <fullName>Representative__c</fullName>
    <label>Representative</label>
    <length>100</length>
    <type>Text</type>
</CustomField>